--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5432/GreatEventsDB
+spring.datasource.url=jdbc:postgresql://postgres:5432/Events
 spring.datasource.username=postgres
 spring.datasource.password=root
 
