--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.datasource.url=jdbc:postgresql://postgres:5432/Events
 spring.datasource.username=postgres
 spring.datasource.password=root
 
+spring.kafka.bootstrap-servers=localhost:9092
+
 
